# oh-notifier

./: .gitignore  README.md  pyproject.toml
src/oh_notifier/: __init__.py  categorizer.py  config.py  context.py  event.py  formatter.py  logging_handler.py  masking.py  notifier.py  rate_limiter.py  sender.py  utils.py
src/oh_notifier/integrations/: aio_pika.py  apscheduler.py  celery.py  fastapi.py
tests/: test_buffer.py  test_categorizer.py  test_configure.py  test_event.py  test_formatter.py  test_masking.py
