[project]
name = "oh-notifier"
version = "0.1.0"
description = "Lightweight error monitoring for Python services — Telegram alerts + auto-categorization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "httpx",
]

[project.optional-dependencies]
fastapi = ["starlette"]
celery = ["celery"]
apscheduler = ["apscheduler"]
aio-pika = ["aio-pika"]
dashboard = ["sqlalchemy[asyncio]", "asyncpg", "jinja2"]
all = ["starlette", "celery", "apscheduler", "aio-pika"]
dev = ["pytest", "pytest-asyncio", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oh_notifier"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]
